[package]
name = "lazy_hash"
version = "0.1.0"
edition = "2021"
[[bin]]
path = "src/bin/generate_secret.rs"
name = "generate_secret"
[dependencies.base64]
version = "0.13.0"
[dependencies.bcrypt]
version = "0.13.0"
[dependencies.dotenvy]
version = "0.15.3"
[dependencies.orion]
version = "0.17.2"
[dependencies.uuidv4-rs]
path = "../uuidv4-rs"
